# candle-dribbler

./: .gitignore  CMakeLists.txt  Makefile  README.rst  dependencies.lock.esp32c6  dependencies.lock.esp32h2  hass-rename-entities.sh  partitions.csv  partitions.esp32-h2-devkitm-1.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2
.uuid-uk/: Jenkinsfile
pipenv/: Makefile  Pipfile
src/: CMakeLists.txt  Kconfig  base64.cpp  debounce.cpp  device.cpp  idf_component.yml  light.cpp  log.cpp  main.cpp  ota.cpp  thread.cpp  ui.cpp  util.cpp  zigbee.cpp
src/nutt/: base64.h  debounce.h  device.h  light.h  log.h  main.h  ota.h  thread.h  ui.h  util.h  zigbee.h
